﻿FIXES
	- Consider 'splashed' vessels as 'landed' when spawning.
	- Get the AI on the initial load when reverting to the editor.
	- Fix the AI GUI updating the values when switching vessels when using numeric fields.
	- Fix some surface AI values being initialised from the wrong variables in the AI GUI.
	- Fix speed mutators from setting engine throttle to 0.
IMPROVEMENTS
	- Add a toggle for showing the competition status messages with the UI hidden.
	- Add option for bullets and rockets to have considerable drag when in water (if fired from underwater). Bullets and rockets fired from above water stop when entering water and explode if they're explosive.
	- Add S4R1 RWP option for adjusting the firing rate of weapons in-game.

v1.4.9.1
FIXES
	- Fix various fields in the AI GUI for surface AIs.
	- Fix broadside direction to not be reversed.
	- Set default mutator mode (for new installs) to false.
	- Add missing checks for empty mutator list (was causing competitions to fail to start).
	- Fix laser damage calculation.

v1.4.9.0
FIXES
	- Fixes an NRE in PartExtension.GetSize that was causing KSP to crash when deploying a flag.
	- Properly reset the AIGUI input fields when adding and removing multiple AIs.
	- Add missing field to surface AI input fields.
	- Fix Evolution UI bug and allow 0 adversaries.
	- Make the CASE-I explosion directed in the up direction of the part.
	- Check for null vessels in ForceUpdateRadarCrossSections (fixes competitions not starting due to this exception).
	- When setting HP of parts, use an alternate approach to getting volume based on partSize when GetAverageBoundSize gives ridiculous results. Failing that, just base it on mass. (Fixes HP on TweakScale and AP+ parts.)
	- Actually run the armour and hull setup functions in flight mode.
	- Add conformal decal exception to HP/Armor visualizer.