@@ -4,10 +4,13 @@
 	- Fix the AI GUI updating the values when switching vessels when using numeric fields.
 	- Fix some surface AI values being initialised from the wrong variables in the AI GUI.
 	- Fix speed mutators from setting engine throttle to 0.
+	- Fix mutator mode interaction with weapon arenas and impulse weapons (gravity gun).
 IMPROVEMENTS
 	- Add a toggle for showing the competition status messages with the UI hidden.
 	- Add option for bullets and rockets to have considerable drag when in water (if fired from underwater). Bullets and rockets fired from above water stop when entering water and explode if they're explosive.
 	- Add S4R1 RWP option for adjusting the firing rate of weapons in-game.
+	- Adjust armor panel buoyancy, armor panels will float again when at max thickness.
+	- Adjust camera weights for picking a better vessel to switch to.
 
 v1.4.9.1
 FIXES
